Temporary fix for scale from 0, 0
- scale tweens also behave differently from rotation, attempt to cover the basic case here
- TODO: Need to properly account for tweening, potentially change cropping to match
- also fix success text color

--- a/main.css
+++ b/main.css
@@ -186,7 +186,7 @@ button:disabled {
 	visibility: visible;
 }
 
-.success_resp span {
+.success_resp {
 	color: #00c853;
 }
 
